# mkdt-data-distill-ssl

./: .gitignore  README.md  pyproject.toml  setup.py
src/mkdt/: buffer.py  create_buffers.sh  distill.py  eval.py  full_finetune.py  linear_evaluation.py  networks.py  pretrain.py  reparam_module.py  utils.py
src/mkdt/downstream_datasets/: __init__.py  aircraft.py  cub2011.py  dogs.py
src/mkdt/teacher_repr/: bt_model.py  get_teacher_repr.py
